fix(styles): use em for letter-spacing vals

--- a/packages/styles/scss/theme/_foundation.scss
+++ b/packages/styles/scss/theme/_foundation.scss
@@ -101,10 +101,10 @@
   /**
     * Letter spacing
     */
-  --ilo-letter-spacing-xsm: -3.5%;
-  --ilo-letter-spacing-sm: -2%;
-  --ilo-letter-spacing-md: 0;
-  --ilo-letter-spacing-lg: 2%;
+  --ilo-letter-spacing-xsm: -0.035em;
+  --ilo-letter-spacing-sm: -0.02em;
+  --ilo-letter-spacing-md: 0em;
+  --ilo-letter-spacing-lg: 0.02em;
 
   /**
     * Spacing
